file name, repository changed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <button id="reset-button">리셋</button>
 
 
-    <script src="2. HTML과 자바스크립트가 소통하는 법.js"></script>
+    <script src="GuessNumberGame.js"></script>
 </body>
 </html>
