file name changed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <button id="reset-button">리셋</button>
 
 
-    <script src="GuessNumberGame.js"></script>
+    <script src="guess_number_game.js"></script>
 </body>
 </html>
